# bot

./: .dockerignore  .env.example  .gitignore  .loq_cache  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  MIGRATION.md  QUICKSTART.md  README.md  SKILL-OR-TOOL.md  SKILLS-API.md  STATUS.md  TOOL-SPRAWL.md  USER-VIEW.md  fly.toml  justfile  loq.toml  pyproject.toml
.tangled/workflows/: deploy.yml
docs/: ARCHITECTURE.md  README.md  mcp.md  memory.md  personality_editing_design.md  system-prompt.md  testing.md
evals/: README.md  conftest.py  test_basic_responses.py  test_feed_consumption.py  test_feed_creation.py  test_memory_integration.py  test_skills.py
notes/: spam-handling-proposal.md
personalities/: README.md  default.md  phi.md
sandbox/: APPROVAL_SYSTEM.md  MCP_REFACTOR_SUMMARY.md  REFACTOR_PROGRESS.md  REFERENCE_PROJECTS.md  TESTING_STRATEGY.md  THREAD_STORAGE_REFACTOR.md  architecture_synthesis.md  fetch_blog.py  implementation_notes.md  marvin_slackbot_analysis.md  memory_architecture_plan.md  open_social_full.txt  penelope_analysis.md  penelope_thread_insights.md  reference_analysis.md  register_webhook.py  test_memory_smoke.py  test_new_agent.py  threads.db.archive  turbopuffer_research.md  view_phi_posts.py  void_memory_analysis.md  void_memory_system.md  void_self_modification.md
scripts/: fix_cosmik_records.py  manage_memory.py  memory_inspect.py  memory_versions.py  migrate_embeddings.py  test_agent_search.py  test_bot.py  test_ignore_tool.py  test_mention.py  test_post.py  test_search.py  test_thread_context.py  test_tool_proof.py  view_thread.py
skills/cosmik-records/: CARD-NOTE.md  CARD-URL.md  CONNECTION.md  SKILL.md
skills/pdsx-fundamentals/: SKILL.md
skills/publish-blog/: SKILL.md
src/bot/: __init__.py  agent.py  config.py  database.py  exploration.py  logging_config.py  main.py  memory.py  personality.py  response_generator.py  status.py  templates.py  types.py
src/bot/agents/: __init__.py  _personality.py  anthropic_agent.py  base.py  types.py
src/bot/atproto_mcp/: __init__.py  __main__.py  server.py  settings.py  types.py
src/bot/core/: atproto_client.py  cosmik.py  curiosity_queue.py  discovery_pool.py  dm_approval.py  feed_scanner.py  goals.py  graze_client.py  mentionable.py  observations.py  operator.py  owned_feeds.py  (+6 more)
tests/: conftest.py  test_ai_integration.py  test_config.py  test_graze_client.py  test_memory_smoke.py  test_mention_allowlist.py  test_moderation.py  test_rate_limiting.py  test_relative_when.py  test_resolve_facets.py  test_response_generation.py  test_rich_text.py  test_search_network.py  test_source_uris.py  test_split_text.py  test_tool_usage.py  test_types.py
web/: bun.lockb  package.json  vite.config.ts
web/src/: app.css  app.html
(+74 files in other folders)
