[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "atproto",
    "pydantic-settings",
    "pydantic-ai",
    "anthropic",
    "httpx",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "ty",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
