[project]
name = "bot"
description = "a bluesky bot"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "anthropic",
    "atproto@git+https://github.com/MarshalX/atproto.git@refs/pull/605/head",
    "fastapi",
    "fastmcp>=0.8.0",
    "openai",
    "pydantic-ai",
    "pydantic-settings",
    "rich",
    "turbopuffer",
    "uvicorn",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio",
    "pytest-sugar",
    "ruff",
    "ty",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
